[package]
name = "cranberry"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
crossterm = "0.28"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
